[workspace]
members = ["wired-core", "wired-wasm"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/wired-transport"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25", default-features = false, features = ["png"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
rand_core = "0.6"
rand_xoshiro = "0.6"
reed-solomon-erasure = "6"
ring = "0.17"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
