[package]
name = "wired-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
getrandom.workspace = true
image.workspace = true
rand_core.workspace = true
rand_xoshiro.workspace = true
reed-solomon-erasure.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
chacha20poly1305 = "0.10"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
