[package]
name = "wired-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
getrandom.workspace = true
image.workspace = true
instant.workspace = true
js-sys.workspace = true
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Blob",
    "BlobPropertyBag",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Url",
    "Window",
] }
wired-core = { path = "../wired-core" }
